# OpenBuilder

./: ..gitignore.un~  .README.md.un~  .gitignore  .gitignore~  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  README.md~  animations.cpp  animations.h  camera.cpp  camera.h  character.cpp  character.h  cmake_install.cmake  enemy.cpp  enemy.h  gamestate.cpp  gamestate.h  gui.cpp  gui.h  inventory.cpp  inventory.h  main.cpp  map.cpp  map.h  perlin.cpp  perlin.h  projectile.cpp  projectile.h  utils.cpp  utils.h
Important Files/: gui.h  project-notes.txt
Maps/: logs.txt  map-huge.txt  map-natural.txt  map-test.txt  map1.txt  map1b.txt
UI-Textures/: slider-arrow-texture.xcf
Worlds/: NewWorld_background_tiles.map  NewWorld_metadata.txt  NewWorld_tiles.map
